--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/SceneTransition.tscn", "res://Scenes/PlayerScene.tscn")
-current_scene="res://Scenes/LevelScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/SceneTransition.tscn", "res://Scenes/PlayerScene.tscn")
+current_scene="res://Scenes/Food.tscn"
 center_split_offset=-395
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Resources/FoodResource.gd", "res://Scripts/FoodScript.gd", "res://Scripts/LevelScene.gd", "res://Resources/Maps/MapResource.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayButtonScript.gd", "res://Scripts/PlayerScript.gd", "res://Scripts/SceneTransitionScript.gd"]
-selected_script="res://Scripts/PlayerScript.gd"
+selected_script="res://Scripts/FoodScript.gd"
 open_help=["@GlobalScope", "Array", "BaseButton", "Button", "Camera2D", "CollisionShape2D", "GridContainer", "Input", "Node", "Object", "PackedScene", "Sprite2D", "StyleBox", "Vector2"]
 script_split_offset=70
 list_split_offset=0
